refactor: builder change