@@ -2,22 +2,19 @@ package br.inatel.conversionmanager.mapper;
 
 import br.inatel.conversionmanager.model.dto.ConversionDto;
 import br.inatel.conversionmanager.model.entities.Conversion;
-import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Component
 public class ConversionMapper {
 
     public static ConversionDto toDto(Conversion conversion) {
-        return new ConversionDto(
-                conversion.getBase(),
-                conversion.getAmount(),
-                conversion.getCurrency(),
-                conversion.getConverted(),
-                conversion.getDate()
-        );
+        return ConversionDto.builder()
+                .baseCurrency(conversion.getBase())
+                .amount(conversion.getAmount())
+                .to(conversion.getCurrency())
+                .convertedAmount(conversion.getConverted())
+                .date(conversion.getDate())
+                .build();
     }
 
     public static Conversion toEntity(ConversionDto conversionDto) {
@@ -33,8 +30,7 @@ public class ConversionMapper {
     public static List<ConversionDto> toDtoList(List<Conversion> conversions) {
         return conversions.stream()
                 .map(ConversionMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
-
